<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/counter"
        style="@style/row"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/teamA"
            style="@style/column">

            <TextView
                style="@style/BasicStyle"
                android:padding="16dp"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/largeNumber"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/initial_value" />

            <Button
                style="@style/typicalButton"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:onClick="runForTeamA"
                android:text="@string/run" />

            <Button
                style="@style/typicalButton"
                android:layout_width="match_parent"
                android:onClick="grandSlamForTeamA"
                android:text="@string/grand_slam" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/teamB"
            style="@style/column">

            <TextView
                style="@style/BasicStyle"
                android:padding="16dp"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/largeNumber"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/initial_value" />

            <Button
                style="@style/typicalButton"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:onClick="runForTeamB"
                android:text="@string/run" />

            <Button
                style="@style/typicalButton"
                android:layout_width="match_parent"
                android:onClick="grandSlamForTeamB"
                android:text="@string/grand_slam" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/numberOuts"
        style="@style/largeNumber"
        android:layout_width="wrap_content"
        android:layout_below="@id/counter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/initial_value" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/numberOuts"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/outs"
        style="@style/BasicStyle"
        android:layout_below="@id/numberOuts"
        android:layout_centerHorizontal="true"
        android:text="@string/outs" />

    <TextView
        android:id="@+id/battingState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/outs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/initial_batting_state"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/battingState"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:onClick="out"
        android:text="@string/out_button" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        style="@style/row"
        android:layout_alignParentBottom="true">

        <Button
            style="@style/typicalButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="setBattingState"
            android:text="@string/switch_batting_state" />

        <Button
            style="@style/typicalButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="resetScores"
            android:text="@string/reset_button" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottomButtons"
        android:background="@android:color/darker_gray" />

</RelativeLayout>